--- a/index.css
+++ b/index.css
@@ -186,12 +186,12 @@ ion-icon {
   display: flex;
   flex-direction: column;
   justify-content: start;
-  height: 66vw;
-  width: 90%;
+  height: 300px;
+  width: 100%;
   background-color: var(--bg_default);
   border-radius: 8px;
   box-shadow: 0px 0px 4px 0px var(--lines-color);
-  margin-top: 7vw;
+  margin-top: 20px;
 }
 
 .background-card {
@@ -200,7 +200,7 @@ ion-icon {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  border-radius: 8px;
+  border-radius: 8px 8px 0 0;
 }
 
 .card-info {
