--- a/index.css
+++ b/index.css
@@ -6,6 +6,9 @@
   --lines-color: #dddddd;
   --body-text: #333333;
   --heart-color: #dc143c;
+  --home-mobile-padding: 15px;
+  --mix-secondary-primary: #06869d;
+  --mix-body-text-lines-color: #737373;
 }
 
 body,
@@ -14,17 +17,26 @@ p {
   margin: 0;
 }
 
+body {
+  background-color: var(--bg_body);
+  padding-bottom: 50px;
+}
 input {
   padding: 0;
+}
+
+* {
+  font-family: "Nunito Sans", sans-serif;
+  box-sizing: border-box;
 }
 
 .container-home {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
   width: 100%;
   background-color: var(--bg_body);
+  padding-left: var(--home-mobile-padding);
+  padding-right: var(--home-mobile-padding);
 }
 
 header {
@@ -34,47 +46,48 @@ header {
   margin-top: 10px;
   background-color: var(--bg_default);
   width: 100%;
+  padding-bottom: 10px;
 }
 
 .container-header-1 {
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
-  margin-top: 20px;
+  margin-top: 10px;
+  padding-left: var(--home-mobile-padding);
+  padding-right: var(--home-mobile-padding);
 }
 
 .web-topics {
-  color: var(--brand-primary);
-  margin-left: 10px;
-  font-size: 1rem;
-  font-weight: 200;
+  color: var(--mix-secondary-primary);
+  font-size: 0.94rem;
+  font-weight: 700;
   margin-top: 5px;
 }
 
 .icons {
-  margin-right: 10px;
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
-  width: 85px;
+  width: 75px;
 }
 
-.button-icon {
+.icon-button {
   background-color: var(--bg_default);
   border-radius: 20%;
+  text-align: center;
   border: 1px solid var(--lines-color);
-  width: 40px;
-  height: 30px;
+  width: 35px;
+  height: 25px;
+  padding-top: 5px;
 }
 
 ion-icon {
-  font-size: 16px;
+  font-size: 14px;
+  color: var(--body-text);
 }
 
 .bar-header {
   display: flex;
-  flex-direction: row;
-  height: 30px;
+  height: 20px;
   margin-top: 20px;
 }
 
@@ -92,29 +105,32 @@ ion-icon {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-left: 10px;
-  height: 100px;
-  padding-bottom: 5px;
+  height: 80px;
+  padding-left: var(--home-mobile-padding);
+  padding-right: 20px;
 }
 
 .welcome-header-1 {
-  font-size: 1.2rem;
+  font-size: 1.3rem;
   color: var(--brand-secondary);
   font-weight: 800;
   margin-right: 10px;
+  line-height: 0.7;
 }
 
 .welcome-header-2 {
-  margin-right: 10px;
+  margin-right: 5px;
+  font-weight: 200;
+  font-size: 0.94rem;
 }
 
 .search-bar {
   height: 100px;
   margin-top: 20px;
   background-color: var(--bg_default);
-  width: 80%;
-  border-radius: 8px 8px 8px 8px;
-  box-shadow: 0px 0px 4px 0px var(--lines-color);
+  width: 100%;
+  border-radius: 10px 10px 10px 10px;
+  box-shadow: 0px 0px 6px 0px var(--lines-color);
   position: relative;
 }
 
@@ -124,12 +140,13 @@ ion-icon {
   border-width: 0 0 1px 0;
   border-color: var(--lines-color);
   border-radius: 8px 8px 0 0;
-  color: grey;
+  color: var(--mix-body-text-lines-color);
+  font-weight: 400;
+  font-size: 0.95rem;
 }
 
 .search-select-container {
   display: flex;
-  flex-direction: row;
   width: 100%;
   height: 55%;
   position: relative;
@@ -160,6 +177,7 @@ ion-icon {
   top: 15px;
   left: 10px;
   position: absolute;
+  font-size: 15px;
 }
 
 .select-labels {
@@ -186,7 +204,7 @@ ion-icon {
   display: flex;
   flex-direction: column;
   justify-content: start;
-  height: 300px;
+  height: 250px;
   width: 100%;
   background-color: var(--bg_default);
   border-radius: 8px;
@@ -214,7 +232,7 @@ ion-icon {
 }
 
 .technology-card {
-  font-size: 1rem;
+  font-size: 0.8rem;
   font-weight: 700;
 }
 
@@ -237,8 +255,7 @@ ion-icon {
   color: var(--body-text);
   align-self: self-start;
   margin-top: 20px;
-  margin-left: 10vw;
-  font-weight: 700;
+  font-weight: 800;
 }
 
 .card-1 {
