--- a/index.css
+++ b/index.css
@@ -234,7 +234,6 @@ p {
 }
 
 .card-content:nth-child(2) {
-  color: var(--body-text);
   padding-left: 15px;
   padding-bottom: 15px;
 }
@@ -245,6 +244,7 @@ p {
 
 .card-info:nth-child(3) {
   margin-left: 5px;
+  margin-top: 25px;
 }
 
 .card-info:nth-child(4) {
@@ -260,10 +260,10 @@ h3 {
 h4 {
   font-size: 0.8rem;
   font-weight: 700;
+  color: var(--body-text);
 }
 
 .rating {
-  margin-top: 25px;
 }
 
 h5 {
@@ -294,24 +294,56 @@ h2 {
   margin-top: 0;
 }
 
-/* .favourites {
-  display: flex;
-  position: sticky;
-  width: 100%;
-  background-color: var(--bg-default);
-  padding-left: 20px;
-  padding-right: 20px;
-} */
-
-/* .small-card {
+.favourites {
   display: flex;
   flex-direction: column;
-  width: 20%;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 178px;
+  background-color: var(--bg-default);
+  padding-left: var(--mobile-layout-padding);
+  padding-right: var(--mobile-layout-padding);
+  box-shadow: 0px 0px 6px 0px var(--lines-color);
+  z-index: 1;
 }
+
+.favourites div {
+  margin-top: 5px;
+}
+
+.favourites > h4 {
+  font-size: 0.9rem;
+  margin-top: 12px;
+}
+
+.small-card {
+  display: flex;
+  flex-direction: column;
+  width: 110px;
+  box-shadow: 0px 0px 6px 0px var(--bg-body);
+  border-radius: 5px 5px 5px 5px;
+  padding-bottom: 2px;
+}
+
 .small-card-content:nth-child(1) {
-  height: 30px;
-  width: 50%;
-} */
+  height: 55px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 5px 5px 0 0;
+  background-position: center;
+  width: 100%;
+  margin-top: 0;
+}
+
+.small-card-content:nth-child(2) {
+  padding-left: 10px;
+}
+
+.small-card .rating {
+  margin-top: 0;
+  margin-left: 5px;
+}
 
 footer {
   display: flex;
@@ -344,6 +376,7 @@ footer {
 @media only screen and (min-width: 900px) {
   .card {
     width: 30%;
+    margin-top: 9px;
   }
 
   .main-container {
@@ -421,6 +454,11 @@ footer {
     border: 0;
     line-height: 40px;
   } */
+
+  .favourites {
+    padding-left: var(--tablet-layout-padding);
+    padding-right: var(--tablet-layout-padding);
+  }
 }
 
 /* big Screens */
@@ -470,5 +508,10 @@ footer {
 
   .card-content:nth-child(1) {
     height: 135px;
+  }
+
+  .favourites {
+    padding-left: var(--Desktop-layout-padding);
+    padding-right: var(--Desktop-layout-padding);
   }
 }
