--- a/CSS/index.css
+++ b/CSS/index.css
@@ -230,7 +230,7 @@ p {
   background-color: var(--bg-default);
   border-radius: 8px;
   box-shadow: 0px 0px 4px 0px var(--shadow);
-  margin-top: 9px;
+  padding-bottom: 17px;
 }
 
 .card-content:nth-child(1) {
@@ -244,7 +244,6 @@ p {
 
 .card-content:nth-child(2) {
   padding-left: 15px;
-  padding-bottom: 15px;
   background-color: var(--bg-default);
 }
 
@@ -287,10 +286,6 @@ h5 {
   font-weight: 400;
 }
 
-.background-card-1 {
-  background-image: url("./assets/html.png");
-}
-
 h2 {
   font-size: 1.5rem;
   color: var(--body-text);
@@ -302,10 +297,6 @@ h2 {
   color: #dea600;
   margin-left: -5px;
   font-size: 15px;
-}
-
-.card-1 {
-  margin-top: 0;
 }
 
 .favourites {
@@ -391,9 +382,10 @@ footer {
   .grid {
     width: 100%;
     display: grid;
-    row-gap: 25px;
+    row-gap: 28px;
+    column-gap: 30px;
     align-items: stretch;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
   }
 
   .favourites {
