--- a/CSS/details.css
+++ b/CSS/details.css
@@ -49,9 +49,9 @@ h2 {
   margin-top: 20px;
 }
 
-.main-content .rating {
+/* .main-content .rating {
   margin-left: 5px;
-}
+} */
 
 .main-content .star {
   font-size: 17px;
