--- a/CSS/index.css
+++ b/CSS/index.css
@@ -176,6 +176,7 @@ p {
   font-weight: 400;
   font-size: 0.95rem;
   background-color: var(--bg-default);
+  padding-left: 32px;
 }
 
 .search-select-container {
@@ -306,7 +307,7 @@ h2 {
 
 .star {
   color: #dea600;
-  margin-left: -5px;
+  margin-left: -2px;
   font-size: 15px;
 }
 
