--- a/src/Components/Header/index.css
+++ b/src/Components/Header/index.css
@@ -7,24 +7,9 @@ input {
   padding: 0;
 }
 
-* {
-  font-family: "Nunito Sans", sans-serif;
-  box-sizing: border-box;
-  margin: 0;
-}
-
 a {
   text-decoration: none;
   cursor: pointer;
-}
-
-.main-container {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  background-color: var(--bg-body);
-  padding-left: var(--mobile-layout-padding);
-  padding-right: var(--mobile-layout-padding);
 }
 
 header {
@@ -37,13 +22,6 @@ header {
   background-color: var(--bg-default);
 }
 
-h1 {
-  color: var(--brand-primary);
-  font-size: 0.94rem;
-  font-weight: 700;
-  margin-top: 5px;
-}
-
 header .icons {
   display: flex;
   justify-content: space-between;
@@ -53,5 +31,17 @@ header .icons {
 @media only screen and (min-width: 900px) {
   header .icons {
     width: 231px;
+  }
+
+  header {
+    padding-left: var(--tablet-layout-padding);
+    padding-right: var(--tablet-layout-padding);
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  header {
+    padding-left: var(--Desktop-layout-padding);
+    padding-right: var(--Desktop-layout-padding);
   }
 }
