--- a/src/Components/LinkCard/index.css
+++ b/src/Components/LinkCard/index.css
@@ -28,7 +28,6 @@
 }
 
 .card-info:nth-child(3) {
-  margin-left: 5px;
   margin-top: 25px;
 }
 
@@ -60,4 +59,10 @@ h5 {
   color: grey;
   font-size: 0.8rem;
   font-weight: 400;
+}
+
+@media only screen and (min-width: 1200px) {
+  .card-content:nth-child(1) {
+    height: 135px;
+  }
 }
