--- a/src/Components/TopicActionCard/index.module.css
+++ b/src/Components/TopicActionCard/index.module.css
@@ -1,59 +1,58 @@
-.action-card {
+.container {
   background-color: #ffffff;
   box-shadow: 0px 0px 4px 0px var(--shadow);
 }
 
-.action-card-content:nth-child(1) {
+.image {
   height: 200px;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
 }
 
-.action-card-content:nth-child(2) {
+.info {
   padding: 15px;
   background-color: #ffffff;
 }
 
-.action-card-content h4 {
+.topic {
   display: inline;
   color: #333333;
 }
 
-.action-card-info:nth-child(2) {
+.info span {
   color: var(--body-text);
   color: #333333;
 }
 
-.action-card-info:nth-child(3) {
+.author {
   text-decoration: underline;
   color: var(--brand-primary);
   margin: 0;
 }
 
-.action-card-info:nth-child(3):active {
+.author:active {
   color: red;
 }
 
-.action-card-info:nth-child(3):visited {
+.author:visited {
   color: blue;
 }
 
-.action-card-info:nth-child(4) {
+.box {
   border: 1px solid #dddddd;
   display: flex;
   flex-direction: column;
   padding: 20px 20px 20px 15px;
 }
 
-.action-card-info > div {
+.box > div {
   color: #333333;
   font-size: 1rem;
 }
 
-.big-icon-button {
+.button {
   width: 100%;
-  background-color: var(--brand-secondary);
   border-radius: 0;
   display: flex;
   justify-content: center;
@@ -66,7 +65,15 @@
   cursor: pointer;
 }
 
-.big-icon-button label {
+.button-add {
+  background-color: var(--brand-secondary);
+}
+
+.button-remove {
+  background-color: var(--heart-color);
+}
+
+.action {
   font-size: 1.3rem;
   color: var(--body-text-dark);
   margin-right: 5px;
@@ -79,7 +86,21 @@
   margin-left: 5px;
 }
 
-.action-card-info h5 {
+.box h5 {
   align-self: center;
   margin-top: 10px;
+}
+
+@media only screen and (max-width: 420px) {
+  .button-remove {
+    align-items: center;
+    padding-right: 50px;
+  }
+}
+
+@media only screen and (min-width: 900px) {
+  .button-remove {
+    align-items: center;
+    padding-right: 50px;
+  }
 }
