--- a/src/Pages/Home/index.module.css
+++ b/src/Pages/Home/index.module.css
@@ -1,4 +1,4 @@
-.home {
+.container {
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -14,15 +14,30 @@ h2 {
   font-weight: 800;
 }
 
+.grid {
+  width: 100%;
+  display: grid;
+  row-gap: 28px;
+  column-gap: 30px;
+  align-items: stretch;
+  grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
+  margin-top: 30px;
+}
+
+.loading {
+  display: flex;
+  align-items: center;
+}
+
 @media only screen and (min-width: 900px) {
-  .home {
+  .container {
     padding-left: var(--tablet-layout-padding);
     padding-right: var(--tablet-layout-padding);
   }
 }
 
 @media only screen and (min-width: 1200px) {
-  .home {
+  .container {
     padding-left: var(--Desktop-layout-padding);
     padding-right: var(--Desktop-layout-padding);
   }
