--- a/src/Components/TopicSummeryCard/index.module.css
+++ b/src/Components/TopicSummeryCard/index.module.css
@@ -4,6 +4,8 @@
   box-shadow: 0px 0px 7px 0px var(--shadow);
   border-radius: 3px 3px 3px 3px;
   padding-bottom: 2px;
+  width: 120px;
+  flex-shrink: 0;
 }
 
 .content:nth-child(1) {
