--- a/src/Pages/Details/index.module.css
+++ b/src/Pages/Details/index.module.css
@@ -8,6 +8,7 @@
   position: relative;
   align-items: center;
   padding: 0;
+  min-height: 900px;
 }
 
 .descreption-container {
@@ -16,6 +17,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  min-height: 200px;
+}
+
+.rating {
+  margin-top: 0;
+}
+
+.icon {
+  margin-right: 10px;
 }
 
 /* .details-main-content:nth-child(2) {
